--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -38,7 +38,7 @@
                             <div class="col-12 col-md-9 col-lg-6">
                                 <div class="welcome-text">
                                     <h2 >Django School<br></h2>
-                                    <h3> Desarrolla tus técnicas de seducción</h3>
+                                    <h3> Virtual classroom in django</h3>
                                     <p >Send messages between users, publish tasks, classes and online tests.</p>
                                     <a href="{% url 'signup' %}" class="btn akame-btn" >Register</a>
                                 </div>
