--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -34,10 +34,10 @@
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://comunidadsr.herokuapp.com/quiz">Exam</a>
+                <a class="nav-link" href="https://djangoschooll.herokuapp.com/quiz">Exam</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://comunidadsr.herokuapp.com/vender/">Course</a>
+                <a class="nav-link" href="https://djangoschooll.herokuapp.com/vender/">Course</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'pages:pages' %}">Publications</a>
